--- a/static/styles.css
+++ b/static/styles.css
@@ -1,28 +1,100 @@
+
 #head-container{
     display: flex;
     width: 100%;
     height:100px;
     border:1px solid black;
 }
-#body-container{
+.container1{
     display:flex;
-    flex-direction: row;
+    margin:0;
+    padding:0;
+    width:100vw;
+    justify-content: center;
+    align-items:center;
+}
+
+#btn-container{
+    display:flex;
+    justify-content:space-between;
+    align-items: center;
+    width:95vw;
+   
+}
+body{
+    background-color: black;
+}
+
+#body-container{
+    background-image: url('/images/Dragon-HD.jpeg'), url("/images/Dungeon.jpeg"), url('/images/Ranger.jpeg'), url('/images/Dragon-statues.jpeg'), url('/images/forgotten.jpeg'), url('/images/Knight.jpeg');
+    background-size:cover;
+    background-repeat: no-repeat;
+    background-position:top;
+    display:flex;
     border:1px solid yellow;
     width:100%;
-    height:100vh;
+    height:100%;
 }
 #left-container{
     display:flex;
+    justify-content: center;
     border:1px solid green;
+    width:14vw;
     height:100vh;
-    
+    background-color:black;
+    opacity:85%;
+    color:white;
+    margin-right:10px;
+}
+.characterInfo{
+    display:flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    height:90%;
+}
+
+#char-skills{
+    overflow-y:scroll;
+}
+
+.name-of-char{
+    font-size:200%;
+    font-family: 'Charm', cursive;
 }
 #center-container{
     display:flex;
     border:1px solid red;
+    flex-wrap: wrap;
+    
 }
 #right-container{
     display:flex;
     border:1px solid blue;
 }
 
+#contains-left{
+    display:flex;
+    background-color:black;
+    align-self:flex-start;
+    opacity:85%;
+    height:100vh;
+    
+}
+
+#contains-center{
+    display:flex;
+    /* background-color:rgba(0,0,0,0.55); */
+    color:white;
+    /* opacity:55%; */
+    width:60vw;
+    height:100vh;
+} 
+#black{
+    background-color: black;
+}
+
+#footer{
+    display: flex;
+    width:100%;
+
+}
