--- a/static/styles.css
+++ b/static/styles.css
@@ -13,13 +13,15 @@
     justify-content: center;
     align-items:center;
 }
-
+#char-health-armor-etc{
+    display: flex;
+    justify-content: space-evenly;
+}
 #btn-container{
     display:flex;
     justify-content:space-between;
     align-items: center;
     width:95vw;
-   
 }
 body{
     background-color: black;
@@ -31,18 +33,16 @@ body{
     background-repeat: no-repeat;
     background-position:top;
     display:flex;
-    border:1px solid yellow;
+    
     width:100%;
     height:100%;
 }
 #left-container{
     display:flex;
     justify-content: center;
-    border:1px solid green;
+    
     width:14vw;
     height:100vh;
-    background-color:black;
-    opacity:85%;
     color:white;
     margin-right:10px;
 }
@@ -50,51 +50,137 @@ body{
     display:flex;
     flex-direction: column;
     flex-wrap: wrap;
-    height:90%;
+    height:100%;
 }
-
+#char-extras{
+    display: flex;
+    justify-content: space-evenly;
+}
 #char-skills{
-    overflow-y:scroll;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+#char-heading{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: space-around;
+    align-items: flex-start;
+    justify-content: space-evenly;
+    background-color: rgba(0,0,0,0.5);
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 5px;
 }
 
+#attribute-ST-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    width:280px;
+    background-color: rgba(0,0,0,0.5);
+    padding-left: 10px;
+    padding-bottom: 5px;
+}
+#attribute-ST-text-area{
+    display: flex;
+    justify-content: space-between;
+    margin-right:10px;
+    margin-top:10px;
+}
+#all-text-areas{
+    display: flex;
+    background-color: rgba(0,0,0,0.5);
+    padding:5px;
+}
+#char-text-areas{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-between;
+}
+#second-text-area-set{
+    display:flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-left:5px;
+}
+#char-saving-throws{
+    display: flex;
+    flex-direction: column;
+    flex-wrap:wrap;
+    justify-content:space-evenly;
+}
+.number-inputs{
+    width:40px;
+    border-radius: 50%;
+    text-align: center;
+}
+.large-numbers{
+    width:50px;
+    height:50px;
+    border-bottom-right-radius:50%;
+    border-bottom-left-radius:50%;
+    text-align: center;
+    font-size:125%
+}
+
+#all-skills{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin:10px;
+    font-size: 80%;
+    background-color: rgba(0,0,0,0.5);
+}
+#second-skills-set{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+.attribute-numbers{
+    text-align:center;
+    width:75px;
+    border-radius: 15px;
+    font-size:125%
+}
 .name-of-char{
     font-size:200%;
     font-family: 'Charm', cursive;
 }
 #center-container{
     display:flex;
-    border:1px solid red;
     flex-wrap: wrap;
-    
 }
 #right-container{
     display:flex;
-    border:1px solid blue;
 }
 
 #contains-left{
     display:flex;
-    background-color:black;
+    background-color:rgba(0,0,0,0.7);
     align-self:flex-start;
-    opacity:85%;
     height:100vh;
-    
 }
 
 #contains-center{
     display:flex;
-    /* background-color:rgba(0,0,0,0.55); */
     color:white;
-    /* opacity:55%; */
-    width:60vw;
+    width:50vw;
     height:100vh;
 } 
 #black{
     background-color: black;
 }
+#save-changes-button{
+    display: flex;
+    justify-content: center;
+}
 
 #footer{
     display: flex;
     width:100%;
-
 }
